k8s/https-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: https-express-api
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-prod
spec:
  rules:
  - host: express.davidandw190.com
    http:
      paths:
      - path: /
        backend:
          serviceName: express-api
          servicePort: 9090
  tls:
  - hosts:
    - express.davidandw190.com
    secretName: express-davidandw190-com-tls
